--- a/src/Mint-Y/cinnamon/cinnamon-dark.css
+++ b/src/Mint-Y/cinnamon/cinnamon-dark.css
@@ -592,13 +592,17 @@ StScrollBar {
   height: 120px;
   width: 400px; }
 
+.calendar {
+  spacing-rows: 0;
+  spacing-columns: 0; }
+
 .calendar-main-box {
-  padding: 0 1.0em; }
+  margin: 0 .8em .5em .8em; }
 
 .calendar-events-main-box {
   height: 300px;
   margin-right: .5em;
-  padding: .75em;
+  padding: .5em;
   min-width: 350px;
   border: 1px solid #212221;
   background-color: #424241; }
@@ -690,11 +694,6 @@ StScrollBar {
   color: rgba(255, 255, 255, 0.87);
   font-weight: bold;
   text-align: center; }
-
-.calendar {
-  padding: .4em 1.75em;
-  spacing-rows: 0px;
-  spacing-columns: 0px; }
 
 .calendar-month-label {
   color: rgba(255, 255, 255, 0.87);
